tests/conformance/positive/14-directive-tool.sml
<!-- Tool directive with allow list -->
<tool allow="bash,grep,view">
  <skill interface="code-review">
    def process(data):
        return data.strip()
  </skill>
</tool>
