tests/conformance/negative/19-tool-allow-deny-conflict.sml
<!-- ERROR: tool constraint with both allow and deny -->
<skill define="interface" name="test-skill">
  <tool allow="view,edit" deny="bash" />
</skill>
